Implemented extraction of PDF fonts and writing them to directory

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>guava</artifactId>
             <version>27.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>net.mabboud.fontverter</groupId>
+            <artifactId>FontVerter</artifactId>
+            <version>1.2.22</version>
+        </dependency>
     </dependencies>
 
 
